--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -153,7 +153,7 @@ bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
 # resize pane
-bind -n M-C-Enter resize-pane -Z
+bind -n M-Enter resize-pane -Z
 
 # cycle through windows
 bind -n M-[ select-window -p
