--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -158,6 +158,8 @@ bind -n M-Enter resize-pane -Z
 # cycle through windows
 bind -n M-[ select-window -p
 bind -n M-] select-window -n
+bind-key -n M-C-[ swap-window -t -1\; select-window -t -1
+bind-key -n M-C-] swap-window -t +1\; select-window -t +1
 
 # split window
 # may conflict with vim?
