--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -22,9 +22,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # search-copy shortcuts
 set -g @plugin 'tmux-plugins/tmux-copycat'
 
-# colorscheme gruvbox
-set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark' # or 'light'
+# catppuccin theme
+set -g @plugin 'catppuccin/tmux'
 
 # pain control
 set -g @plugin 'tmux-plugins/tmux-pain-control'
@@ -182,3 +181,33 @@ set -g base-index 1
 
 # start with pane 1
 set -g pane-base-index 1
+
+set -g @catppuccin_flavour 'mocha'
+
+set -g default-terminal "xterm-256color"
+
+# make colors inside tmux look the same as outside of tmux
+# see https://github.com/tmux/tmux/issues/696
+# see https://stackoverflow.com/a/41786092
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+set -g @catppuccin_window_left_separator " █"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_middle_separator "█ "
+set -g @catppuccin_window_number_position "left"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator " █"
+set -g @catppuccin_status_right_separator "█"
+set -g @catppuccin_status_middle_separator "█"
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
